WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177570
REGRESSION(210837): RegExp containing failed non-zero minimum greedy groups incorrectly match
https://bugs.webkit.org/show_bug.cgi?id=177570
Summary
REGRESSION(210837): RegExp containing failed non-zero minimum greedy groups i...
Michael Saboff
Reported
2017-09-27 14:50:38 PDT
The expression /(Q)+|Z*Z/.test("Z ") should return false but returns true.
Attachments
Patch
(2.91 KB, patch)
2017-09-27 19:16 PDT
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2017-09-27 14:53:26 PDT
Fix in progress.
Radar WebKit Bug Importer
Comment 2
2017-09-27 14:53:29 PDT
<
rdar://problem/34698189
>
Daniel LeCheminant
Comment 3
2017-09-27 15:28:01 PDT
/(Q)+|Z*Z/.test("Z ") *should* actually return true but e.g. /(Q)+|(Z)+Z/.test("Z ") should return false
Michael Saboff
Comment 4
2017-09-27 19:16:09 PDT
(In reply to Daniel LeCheminant from
comment #3
)
> /(Q)+|Z*Z/.test("Z ") > > *should* actually return true but e.g. > > /(Q)+|(Z)+Z/.test("Z ") > > should return false
You are right, sorry for the confusion. The RegExp in the description is wrong.
Michael Saboff
Comment 5
2017-09-27 19:16:22 PDT
Created
attachment 322056
[details]
Patch
Michael Saboff
Comment 6
2017-09-27 20:33:25 PDT
The test failures are due to changes
r222586
and are being addressed in
https://bugs.webkit.org/show_bug.cgi?id=177423
.
Mark Lam
Comment 7
2017-09-27 21:03:44 PDT
Comment on
attachment 322056
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=322056&action=review
> Source/JavaScriptCore/ChangeLog:10 > + greedy parenthesis have backtracked as far as possible. Prior to
r210837
when non-zero minimum greedy > + parenthesis were factored into a fixed component and then a zero-based variable component. After
Is there a typo in the sentence "Prior to
r210837
..."? I don't understand what it's trying to say.
WebKit Commit Bot
Comment 8
2017-09-27 22:15:53 PDT
Comment on
attachment 322056
[details]
Patch Clearing flags on attachment: 322056 Committed
r222601
: <
http://trac.webkit.org/changeset/222601
>
WebKit Commit Bot
Comment 9
2017-09-27 22:15:55 PDT
All reviewed patches have been landed. Closing bug.
Michael Saboff
Comment 10
2017-09-28 04:21:35 PDT
(In reply to Mark Lam from
comment #7
)
> Comment on
attachment 322056
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=322056&action=review
> > > Source/JavaScriptCore/ChangeLog:10 > > + greedy parenthesis have backtracked as far as possible. Prior to
r210837
when non-zero minimum greedy > > + parenthesis were factored into a fixed component and then a zero-based variable component. After > > Is there a typo in the sentence "Prior to
r210837
..."? I don't understand > what it's trying to say.
I checked in a fix to that sentence.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug