REGRESSION(210837): RegExp containing failed non-zero minimum greedy groups incorrectly match https://bugs.webkit.org/show_bug.cgi?id=177570

Reviewed by Filip Pizlo.

JSTests:

New regression test.

* stress/regress-177570.js: Added.

Source/JavaScriptCore:

The change in r210837 neglected to change the check in Interpreter::backtrackParentheses() that
greedy parenthesis have backtracked as far as possible.  Prior to r210837 when non-zero minimum greedy
parenthesis were factored into a fixed component and then a zero-based variable component.  After
r210837, the variable component is not zero based and the check needs to compare the
backTrack->matchAmount with the quantity iminimum count.

* yarr/YarrInterpreter.cpp:
(JSC::Yarr::Interpreter::backtrackParentheses):


Canonical link: https://commits.webkit.org/193886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222601 268f45cc-cd09-0410-ab3c-d52691b4dbfc