Source/JavaScriptCore/yarr/YarrInterpreter.cpp
@@ -1032,7 +1032,7 @@ public:
         }
 
         case QuantifierGreedy: {
-            if (!backTrack->matchAmount)
+            if (backTrack->matchAmount == term.atom.quantityMinCount)
                 return JSRegExpNoMatch;
 
             ParenthesesDisjunctionContext* context = backTrack->lastContext;
